# agent-skill-description-optimizer

./: .gitignore  .modern-python-standards.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  optimize_description_v2.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-fix.yml  dependabot-auto-merge.yml  release.yml  security-scan.yml  validate.yml
src/skill_optimizer/: __init__.py  __main__.py  _process.py  cli.py  evaluation.py  improver.py  interpreter.py  models.py  report.py  selection.py  skill_md.py
tests/: conftest.py  test_aggregate.py  test_call_improver.py  test_cli.py  test_encoding.py  test_entrypoint.py  test_evaluate.py  test_interpreter.py  test_pure_logic.py  test_report.py  test_run_single_query.py  test_skill_md.py  test_stream_events.py
tests/e2e/: eval_set.json
tests/e2e/skill/: SKILL.md
tests/fixtures/: README.md  real_no_trigger.jsonl  real_trigger.jsonl  skill_first_trigger.jsonl
