[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "agent-skill-description-optimizer"
version = "0.1.0"
description = "Optimize a Claude Code / Agent skill's description frontmatter for reliable triggering — no API key required."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "netopsengineer", email = "enterprise.code.developer@gmail.com" }]
keywords = [
    "claude",
    "claude-code",
    "skill",
    "agent",
    "description",
    "prompt-optimization",
    "evaluation",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
optimize-skill-description = "skill_optimizer.cli:main"

[project.urls]
Homepage = "https://github.com/netopsengineer/agent-skill-description-optimizer"
Repository = "https://github.com/netopsengineer/agent-skill-description-optimizer"
Issues = "https://github.com/netopsengineer/agent-skill-description-optimizer/issues"

[tool.uv.build-backend]
module-name = "skill_optimizer"
module-root = "src"

[dependency-groups]
dev = [
    "prek>=0.4.9",
    "pydoclint>=0.8.6",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-q"

[tool.pydoclint]
style = "google"
exclude = [".venv"]

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

# python-semantic-release drives releases from Conventional-Commit history on `main`:
# it bumps the static `project.version` below, updates CHANGELOG.md, tags, and cuts a
# GitHub Release. Building/publishing to PyPI is handled by a separate job in
# .github/workflows/release.yml (uv build + gh-action-pypi-publish), so build_command
# is intentionally empty here. See CONTRIBUTING.md and AGENTS.md.
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""
commit_parser = "conventional"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
allow_zero_version = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
