[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "agent-skill-description-optimizer"
version = "0.2.2"
description = "Optimize a Claude Code / Agent skill's description frontmatter for reliable triggering — no API key required."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "netopsengineer", email = "enterprise.code.developer@gmail.com" }]
keywords = [
    "claude",
    "claude-code",
    "skill",
    "agent",
    "description",
    "prompt-optimization",
    "evaluation",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
optimize-skill-description = "skill_optimizer.cli:main"

[project.urls]
Homepage = "https://github.com/netopsengineer/agent-skill-description-optimizer"
Repository = "https://github.com/netopsengineer/agent-skill-description-optimizer"
Issues = "https://github.com/netopsengineer/agent-skill-description-optimizer/issues"

[tool.uv.build-backend]
module-name = "skill_optimizer"
module-root = "src"

[dependency-groups]
dev = [
    "prek>=0.4.10",
    "pydoclint>=0.9.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
# Coverage is enforced on every run (source + branch config lives in [tool.coverage]):
# a run that drops below the 100% floor fails the gate. Use ``--no-cov`` for a partial
# file/selector run where a sub-100 result is expected and not a regression.
addopts = "-q --cov --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["skill_optimizer", "optimize_description_v2"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# 100% line + branch is the enforced floor. Every statement/branch is either exercised
# by a test or covered by one of the exclusions below (all standard, non-testable
# idioms) -- never silenced with a bare pragma. Keep this at 100.
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff.lint]
# Layer the standard lint families onto ruff's own defaults (E4, E7, E9, F): import
# sorting (I), pyupgrade (UP), bugbear (B), simplify (SIM), comprehensions (C4),
# flake8-pie (PIE), ruff's own rules (RUF), flake8-bandit security (S), and the logging
# families (LOG, G). BLE keeps the intentional broad-except sites honest via their inline
# `# noqa: BLE001`. UP lives here (not a separate pyupgrade hook) so a single tool owns
# the syntax-upgrade gate -- no overlapping tools (PY-PROJ-007). ruff infers the upgrade
# target from `requires-python` (>=3.14).
extend-select = ["I", "UP", "B", "SIM", "C4", "PIE", "RUF", "S", "LOG", "G", "BLE"]
# Narrow, project-specific ignores: the HTML report UI and prose intentionally use
# typographic Unicode (en/em dashes, curly quotes, ✓/✗ result glyphs), so ruff's
# ambiguous-character rules (strings/docstrings/comments) are false positives here.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Tests assert liberally (pytest idiom) and spawn real subprocesses to exercise the
# CLI end-to-end (AGENTS.md's documented invocation forms) -- neither is a security
# concern in test code, so the whole flake8-bandit family is exempted here.
"tests/*" = ["S"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# B404 (import subprocess) fires on the import alone with no call-site context; this
# tool's entire purpose is invoking the `claude` CLI via subprocess (AGENTS.md), so the
# import itself is never the risk -- B603 below still reviews each actual call site.
skips = ["B404"]

[tool.pydoclint]
style = "google"
exclude = [".venv"]

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

# python-semantic-release drives releases from Conventional-Commit history on `main`:
# it bumps the static `project.version` below, updates CHANGELOG.md, tags, and cuts a
# GitHub Release. Building/publishing to PyPI is handled by a separate job in
# .github/workflows/release.yml (uv build + gh-action-pypi-publish). The build hook
# only keeps uv.lock synchronized with PSR's version stamp before the release commit.
# The uv pin must match the release workflow. See CONTRIBUTING.md and AGENTS.md.
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
set -eu
python -m pip install --disable-pip-version-check "uv==0.11.29"
uv lock --upgrade-package "$PACKAGE_NAME"
git add uv.lock
"""
commit_parser = "conventional"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
allow_zero_version = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
